# FreshProductBackend

./: .env  Aptfile  Cargo.toml  Procfile  README.md  requirements.txt
migrations/2022-07-13-115738_create_user/: up.sql
migrations/2022-07-14-143506_create_product_info/: up.sql
migrations/2022-08-08-121356_create_max_product_id/: down.sql  up.sql
src/: main.rs
src/auth_api/: mod.rs
src/data_base/: mod.rs
src/hashing_api/: mod.rs
src/logo_api/: mod.rs
src/models/: mod.rs
src/products_api/: mod.rs
src/receipts_api/: find_info.py  mod.rs
src/schema/: mod.rs
