[package]
name = "fresh_product_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.139", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
reqwest = "0.11.11"
tokio = { version = "1.20.0", features = ["full"] }
regex = "1.6.0"
log = "0.4.17"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]